--- a/package.json
+++ b/package.json
@@ -3,10 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "build-dev": "webpack --mode=development",
+    "build-prod": "webpack --mode=production"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
-    "express": "~4.15.5"
+    "express": "~4.15.5",
+    "file-loader": "^3.0.1",
+    "npx": "^10.2.0",
+    "webpack": "^4.28.3"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.2.0"
   }
 }
